CD-116412 фикс правок маши
